# jupyter-cc

./: .gitattributes  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
.claude/: README.md  settings.json
docs/: architecture.md  what-cc-sees.md
docs/plans/: 2026-02-25-onboarding-ux-design.md  2026-02-25-onboarding-ux-plan.md  2026-02-25-streaming-display-design.md  2026-02-25-streaming-display-plan.md  2026-02-26-kernel-tools-auto-images-design.md  2026-02-26-kernel-tools-auto-images-plan.md
examples/: chart_gallery.ipynb  pandas_workflow.ipynb  penguin_analysis.ipynb
src/jupyter_cc/: __init__.py  capture.py  client.py  config.py  constants.py  display.py  history.py  integration.py  magics.py  prompt.py  tools.py  variables.py
src/jupyter_cc_magic/: client.py  constants.py  display.py  history.py  integration.py  magics.py  prompt.py  watcher.py
tests/: conftest.py  test_capture.py  test_config.py  test_display.py  test_example.py  test_integration.py  test_magic.py  test_prompt.py  test_tools.py  test_variables.py
