[project]
name = "jupyter-cc-magic"
version = "1.0.0"
description = "Jupyter magic for Claude Code — %cc brings agentic AI into your notebook cells"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "anyio>=4.12.1",
    "claude-agent-sdk>=0.1.39",
    "ipython>=9.10.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N", "UP", "ASYNC", "S", "PTH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportAttributeAccessIssue = "warning"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
