[project]
name = "jupyter-cc"
version = "0.1.0"
description = "Jupyter magic for Claude Code — %cc brings agentic AI into your notebook cells"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "anyio>=4.12.1",
    "claude-agent-sdk>=0.1.39",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/vinceyyy/jupyter-cc"
Repository = "https://github.com/vinceyyy/jupyter-cc"
Issues = "https://github.com/vinceyyy/jupyter-cc/issues"

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "notebook>=7.5.3",
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N", "UP", "ASYNC", "S", "PTH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603"]
# Ported from upstream — string literals in prompts/help exceed 120 chars
"src/jupyter_cc/prompt.py" = ["E501", "S110"]
"src/jupyter_cc/constants.py" = ["E501"]
"src/jupyter_cc/magics.py" = ["E501", "F841", "S110"]
"src/jupyter_cc/integration.py" = ["E501", "F841"]
"src/jupyter_cc/history.py" = ["E501"]
"src/jupyter_cc/client.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportAttributeAccessIssue = "warning"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
